welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:6: error: ';' expected but 'return' found.
		} return 0
                  ^